# constexpr-chip8

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
data/: keybinds.cfg  window.cfg
include/chip8/: chip8.h
src/: CMakeLists.txt  chip8.h  config_file.cpp  config_file.h  emulator.cpp  emulator.h  main.cpp
test/: CMakeLists.txt  tests.cpp
